# treecko-bot-telegram

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/treecko_bot/: __init__.py  authorization.py  bot.py  config.py  database.py  health.py  logging_config.py  main.py  pdf_parser.py  rate_limiter.py  sheets.py
tests/: __init__.py  test_authorization.py  test_bot.py  test_config.py  test_database.py  test_health.py  test_logging_config.py  test_pdf_parser.py  test_rate_limiter.py  test_sheets.py
